--- a/bj-client/src/main/resources/form/blackjack/blackjack.fxml
+++ b/bj-client/src/main/resources/form/blackjack/blackjack.fxml
@@ -8,6 +8,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="600.0" stylesheets="@blackjack.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+<VBox id="vbDealerCard7" layoutX="53.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard8" layoutX="-7.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
       <Label id="msgText" alignment="CENTER" contentDisplay="CENTER" layoutX="69.0" layoutY="25.0" prefHeight="16.0" prefWidth="462.0" styleClass="msg" />
       <Label layoutX="38.0" layoutY="43.0" text="User:" />
       <Label id="username" layoutX="80.0" layoutY="41.0" prefHeight="18.0" prefWidth="156.0" text="Label">
@@ -21,7 +23,8 @@
          </font></Label>
       <Button id="btnCancel" layoutX="16.0" layoutY="355.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="99.0" text="Give up" />
       <Button id="btnDone" layoutX="15.0" layoutY="267.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="99.0" text="Done" />
-      <Button id="btnTake" layoutX="16.0" layoutY="310.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="99.0" stylesheets="@bet.css" text="Take more" />
+      <Button id="btnClose" layoutX="15.0" layoutY="267.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="99.0" text="Close" />
+      <Button id="btnTake" layoutX="16.0" layoutY="310.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="99.0" text="Take more" />
       <Label layoutX="284.0" layoutY="43.0" prefHeight="17.0" prefWidth="86.0" text="Current bet:" />
       <Label id="lblCurrentBet" layoutX="369.0" layoutY="42.0" text="Label">
          <font>
@@ -56,22 +59,38 @@
 
 
       
-      
-<VBox id="vbDealerCard0" layoutX="473.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard1" layoutX="413.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard2" layoutX="353.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard3" layoutX="293.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard4" layoutX="233.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard5" layoutX="173.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard6" layoutX="113.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard7" layoutX="53.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard8" layoutX="-7.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard9" layoutX="-67.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard10" layoutX="-127.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard11" layoutX="-187.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard12" layoutX="-247.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard13" layoutX="-307.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
-<VBox id="vbDealerCard14" layoutX="-367.0" layoutY="259.0" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard14" layoutX="-367.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard13" layoutX="-307.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard12" layoutX="-247.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard11" layoutX="-187.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard10" layoutX="-127.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard9" layoutX="-67.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard6" layoutX="113.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard5" layoutX="173.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard4" layoutX="233.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard3" layoutX="293.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard2" layoutX="353.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+<VBox id="vbDealerCard1" layoutX="413.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />    
+<VBox id="vbDealerCard0" layoutX="473.0" layoutY="259.0" mouseTransparent="true" prefHeight="120.0" prefWidth="82.0" />
+      <Label id="lblWinText" alignment="CENTER" focusTraversable="false" layoutX="201.0" layoutY="53.0" prefHeight="65.0" prefWidth="218.0" text="Win lbl">
+         <font>
+            <Font size="44.0" />
+         </font>
+      </Label>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
    </children>
 </AnchorPane>
