--- a/bj-client/src/main/resources/form/login/login.fxml
+++ b/bj-client/src/main/resources/form/login/login.fxml
@@ -7,19 +7,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="login.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="login.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button id="signin" layoutX="253.0" layoutY="276.0" mnemonicParsing="false" text="Sing in" />
       <PasswordField id="password" layoutX="205.0" layoutY="212.0" />
       <TextField id="username" layoutX="205.0" layoutY="168.0" />
-      <Label id="welcomeText" layoutX="224.0" layoutY="95.0" styleClass="welcome" text="Welcome" textFill="#801f1fe3">
+      <Label id="welcomeText" focusTraversable="false" layoutX="224.0" layoutY="95.0" styleClass="welcome" text="Welcome" textFill="#801f1fe3">
          <font>
             <Font size="26.0" />
          </font>
       </Label>
-      <Label id="msgText" alignment="CENTER" contentDisplay="CENTER" layoutX="60.0" layoutY="137.0" prefHeight="16.0" prefWidth="462.0" styleClass="msg" />
-      <Label layoutX="132.0" layoutY="173.0" text="username" />
-      <Label layoutX="134.0" layoutY="217.0" text="password" />
+      <Label id="msgText" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="60.0" layoutY="137.0" prefHeight="16.0" prefWidth="462.0" styleClass="msg" />
+      <Label focusTraversable="false" layoutX="132.0" layoutY="173.0" text="username" />
+      <Label focusTraversable="false" layoutX="134.0" layoutY="217.0" text="password" />
    </children>
 </AnchorPane>
